--- a/Bejerholm Stenhuggeri/nbproject/project.properties
+++ b/Bejerholm Stenhuggeri/nbproject/project.properties
@@ -25,10 +25,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Bejerholm_Stenhuggeri.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javax.mail.jar=C:\\Users\\NiklasRenner\\Desktop\\javax.mail.jar
+file.reference.javax.mail.jar-1=lib\\javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
