--- a/Bejerholm Stenhuggeri/nbproject/project.properties
+++ b/Bejerholm Stenhuggeri/nbproject/project.properties
@@ -32,7 +32,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.itextpdf.jar}
+    ${file.reference.itextpdf.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
